--- a/CabAutomationSystem/Views/Cabs/Index.cshtml
+++ b/CabAutomationSystem/Views/Cabs/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<table class="table" border="1">
     <thead>
         <tr>
             <th>
@@ -28,26 +28,27 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.BookId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.BookTime)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.JourneyTime)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.JourneyPlace)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.CabId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.CabId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CabId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.BookId)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.BookTime)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.JourneyTime)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.JourneyPlace)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.CabId">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.CabId">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.CabId">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
