--- a/CabAutomationSystem/Views/DropPoints/Index.cshtml
+++ b/CabAutomationSystem/Views/DropPoints/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<table class="table" border="1">
     <thead>
         <tr>
             <th>
@@ -25,23 +25,24 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.DropPointName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NewDropPointName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Route.RouteName)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.DropPointId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.DropPointId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.DropPointId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DropPointName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.NewDropPointName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Route.RouteName)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.DropPointId">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.DropPointId">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.DropPointId">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
