--- a/CabAutomationSystem/Views/Routes/Index.cshtml
+++ b/CabAutomationSystem/Views/Routes/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<table class="table" border="1">
     <thead>
         <tr>
             <th>
