--- a/CabAutomationSystem/Views/Shared/_Layout.cshtml
+++ b/CabAutomationSystem/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">CabAutomationSystem</a>
+                @*<a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">CabAutomationSystem</a>*@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -35,11 +35,10 @@
                     <li><a asp-area="" asp-controller="Cabs" asp-action="Index">Book Cab</a></li>
                     <li><a asp-area="" asp-controller="DropPoints" asp-action="Index">Drop Points</a></li>
                     <li><a asp-area="" asp-controller="Employees" asp-action="Index">View Employees</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-
-
+                    @*<li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>*@
                 </ul>
+                <partial name="_LoginPartial" />
             </div>
         </div>
     </nav>
@@ -50,7 +49,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2019 - CabAutomationSystem</p>
+            <p>&copy; 2020 - CabAutomationSystem</p>
         </footer>
     </div>
 
