--- a/CabAutomationSystem/Views/Cabs/Index.cshtml
+++ b/CabAutomationSystem/Views/Cabs/Index.cshtml
@@ -44,9 +44,9 @@
                     @Html.DisplayFor(modelItem => item.JourneyPlace)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.CabId">Edit</a> |
+                    @*<a asp-action="Edit" asp-route-id="@item.CabId">Edit</a> |*@
                     <a asp-action="Details" asp-route-id="@item.CabId">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.CabId">Delete</a>
+                    @*<a asp-action="Delete" asp-route-id="@item.CabId">Delete</a>*@
                 </td>
             </tr>
         }
